[gd_scene load_steps=4 format=3 uid="uid://cw36d4x5osfp7"]

[ext_resource type="Script" path="res://Code/Interface/jauge.gd" id="1_0yjvp"]
[ext_resource type="Texture2D" uid="uid://6ivsdf2d07l2" path="res://Assets/Interface/AccelerationBar.svg" id="1_q5ebj"]
[ext_resource type="Texture2D" uid="uid://cqttkks0lo8y0" path="res://Assets/Interface/AccelerationBarFillHFlip.svg" id="2_spigd"]

[node name="Jauge" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yjvp")

[node name="AccelerationBar" type="Sprite2D" parent="."]
position = Vector2(90.4, 360)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_q5ebj")

[node name="AccelerationBarFillHFlip" type="Sprite2D" parent="AccelerationBar"]
position = Vector2(0, 328.333)
texture = ExtResource("2_spigd")
offset = Vector2(0, 25)
flip_v = true
region_enabled = true
region_rect = Rect2(0, 0, 128, 50)

[node name="AccelerationBar2" type="Sprite2D" parent="."]
position = Vector2(1190.4, 360)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_q5ebj")
flip_h = true

[node name="AccelerationBarFillHFlip" type="Sprite2D" parent="AccelerationBar2"]
position = Vector2(0, 328.333)
texture = ExtResource("2_spigd")
offset = Vector2(0, 25)
flip_h = true
flip_v = true
region_enabled = true
region_rect = Rect2(0, 0, 128, 50)
